<resources>

    <string name="app_name">Khmer Culture</string>
    <string name="login">Login to Your Account</string>
    <string name="username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login_main">LOGIN</string>
    <string name="new_user">New User? Register Now</string>
    <string name="options">or login with</string>
    <string name="background">Khmer Empire...</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="culture">Culture</string>
    <string name="sing_in">Login</string>
    <string name="khmer_clothes">Khmer Traditional Clothes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello History Fragment</string>
    <string name="culture_fragment">Hello Culture Fragment</string>
    <string name="phunon">The Khmer culture has a rich and ancient history that dates back to the 9th century. The Khmer people are the ethnic group that is native to Cambodia and they have been heavily influenced by Indian culture, particularly Hinduism and Buddhism.

The Khmer Empire was founded in 802 AD by King Jayavarman II, who established the capital city of Hariharalaya in what is now known as Siem Reap. Over the next several centuries, the Khmer Empire expanded its territory and built magnificent temples and other structures, including the famous Angkor Wat.

During the reign of King Suryavarman II in the 12th century, the Khmer Empire reached its peak and became one of the most powerful empires in Southeast Asia. However, after this period of prosperity, the empire began to decline due to internal conflicts and external pressures from neighboring kingdoms.

In the 15th century, the Khmer Empire was conquered by the Siamese (now known as Thailand) and became a vassal state. The country remained under Siamese control for over 400 years until the French colonized Cambodia in the late 19th century.

Despite centuries of foreign rule and influence, the Khmer culture has endured and continues to be celebrated today. Traditional Khmer dance, music, and art are still practiced and appreciated, and the Khmer language remains the official language of Cambodia.

In recent years, efforts have been made to preserve and promote Khmer culture, particularly through tourism and education. The Angkor Archaeological Park, which includes Angkor Wat and other ancient temples, is a UNESCO World Heritage Site and attracts millions of visitors each year. Additionally, schools and cultural centers have been established to teach Khmer language, dance, and other traditional arts to younger generations.</string>

</resources>