<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="23dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape"
        android:hint="@string/username"
        android:paddingStart="15dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape"
        android:hint="@string/password"
        android:paddingStart="15dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/purple_500"
        android:text="@string/login_main"
        android:textSize="18dp"
        app:cornerRadius="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/new_user"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_below="@id/user"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:background="@color/dark_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/options"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_below="@id/user"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@color/dark_blue" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="140dp"
            android:padding="95dp"
            android:src="@drawable/google_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="92dp"
            android:src="@drawable/facebook_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:padding="92dp"
            android:src="@drawable/twitter_icon" />


    </RelativeLayout>

</LinearLayout>